The fixed nav covers images

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ nav {
     width: 100%;
     background-color: #141414;
     opacity: 0.9;
+    z-index: 9999;
 }
         
 nav ul{
